add fade out effect for halfave

--- a/Arceus/templates/halfave/MainPage.html
+++ b/Arceus/templates/halfave/MainPage.html
@@ -42,7 +42,7 @@
 	</div>
 	
 	<div id="section2" class="container-fluid">
-		<div class="row h-50">
+		<div class="row h-50 scrollAppear">
 			<div class="col-lg-4 col-xs-12">
 				<div class="row h-75">
 					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec2Header"></div>
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row h-50">
+		<div class="row h-50 scrollAppear">
 			<div class="col-lg-8 offset-lg-4 col-md-12">
 				<div class="row h-80">
 					<div class="col-12 d-none d-lg-block" id="sec2Pic"></div>
@@ -60,17 +60,17 @@
 			</div>
 		</div>
 	</div>
-	<div id="section3Mobile" class="d-block d-lg-none">
-		<div class="row h-50">
+	<div id="section3Mobile" class="d-block d-lg-none ">
+		<div class="row h-50 scrollAppear">
 			<div class="col-lg-4 col-xs-12">
-				<div class="row h-75">
+				<div class="row h-75 ">
 					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec3MobileHeader"></div>
 					<div class="col-lg-1 col-md-12 text-center"><div id="sec3MobileHeaderDeco" class="text-lg-start text-md-center text-sm-center text-xs-center"></div></div>
 					<div class="row text-lg-start text-md-center text-sm-center text-xs-center" id="sec3MobilePara"></div>
 				</div>
 			</div>
 		</div>
-		<div class="row h-50">
+		<div class="row h-50 scrollAppear">
 			<div class="col-lg-8 offset-lg-4 col-md-12">
 				<div class="row h-80">
 					<div class="col-12 d-none d-lg-block" id="sec3Pic"></div>
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="section3" class="container-fluid bg-image d-none d-lg-block" >
+	<div id="section3" class="container-fluid bg-image d-none d-lg-block scrollAppear" >
 		<div class="row h-50">
 			<div class="col-lg-4 col-xs-12">
 				<div class="row h-75">
@@ -98,7 +98,7 @@
 	</div>
 
 	<div id="section4" class="container-fluid">
-		<div class="row h-50">
+		<div class="row h-50 scrollAppear">
 			<div class="col-lg-5 offset-lg-6 col-xs-12">
 				<div class="row h-75">
 					<div class="col-lg-2 col-md-12 text-sm-center text-md-center text-lg-start"><div id="sec4Dots" class="w-100"></div></div>
@@ -107,7 +107,7 @@
 			</div>
 		</div>
 		<div class="marginBlock"></div>
-		<div class="row h-50">
+		<div class="row h-50 scrollAppear">
 			<div class="col-lg-8 col-md-12">
 				<div class="row h-80">
 					<div class="col-12 d-none d-lg-block" id="sec4Pic"></div>
