--- a/Arceus/templates/Dodge/enter.html
+++ b/Arceus/templates/Dodge/enter.html
@@ -96,26 +96,35 @@
 	</div>
 
 			{# 正文 #}
-		<div style="width: 100%;height:auto;box-shadow: 0px 5px 5px #cccccc;padding-top: 100px;padding-bottom:100px;margin:auto;">
-			<div style="margin-top: 200px;">
-				<img src="{% static 'Dodge/nuist.png' %}"  style="height: 300px;" alt="">
-			</div>
-			<div style="border: 1px solid rgb(170, 170, 170);width: 96%;margin-left: 2%;padding: 20px;">
-				<div style="border:5px inset rgb(196, 193, 193);text-align: center;">
-					<span style="font-size:50px;font-weight: 200;">销假请假二维码</span>
-					<div style="height: 80px;"></div>
-					<span style="font-size: 50px;">{{name}} {{stu_id}}</span>
-					<div style="height: 30px;"></div>
-					<div><span style="font-size: 50px;">{{college}}</span></div>
-					<div></div>
-					<span id="datetime" style="font-size: 45px;font-weight: bold;"></span>
-					<div style="width:90%;margin-left: 5%;border:10px solid rgb(106,175,118)"><img id="qrcodeImg" src="{% static 'Dodge/qrcode321281199907285178.png' %}" style="width: 100%;" alt=""></div>
-					<div style="font-size: 50px;color:red;"><span>有效时间：<span id="today1"></span>至<span id="today2"></span></span></div>
-					<div style="font-size: 50px;font-weight: bold;">审核状态：审核通过</div>
-					<div style="width: 40%;margin-left: 30%;font-size: 50px;color:gray;background-color: rgb(106,175,118);padding-top: 10px;padding-bottom: 10px;font-style: italic;margin-top: 20px;">已进校</div>
-				</div>
+		
+<div style="width: 100%;height:auto;box-shadow: 0px 5px 5px #cccccc;padding-top: 100px;padding-bottom:100px;margin:auto;">
+	<div style="margin-top: 200px;">
+		<img src="{% static 'Dodge/nuist.png' %}"  style="height: 260px;" alt="">
+	</div>
+	<div style="border: 1px solid rgb(170, 170, 170);width: 96%;margin-left: 2%;padding: 20px;max-height: 70vh;overflow: scroll;">
+		<div style="border:5px inset rgb(196, 193, 193);text-align: center;">
+			<div style="width:90%;border-radius:20px;box-shadow: 0 5px 10px 1px rgb(176, 174, 174);margin-left:5%;">
+				<span style="font-size:60px;font-weight: 300px; color:black;">请假出校二维码</span>
+				<div style="height: 80px;"></div>
+				<span style="font-size: 50px;font-weight:800">{{name}} {{stu_id}}</span>
+				<div style="height: 20px;"></div>
+				<div><span style="font-size: 50px;font-weight:800">{{college}}</span></div>
+				<div style="height: 20px;"></div>
+				<span id="datetime" style="font-size: 75px;font-weight: bold;"></span>
+				<div style="height:20px"></div>
+				<div style="width:90%;margin-left: 5%;border:15px solid rgb(106,175,118)"><img id="qrcodeImg" src="{% static 'Dodge/qrcode321281199907285178.png' %}" style="width: 100%;" alt=""></div>
+				<div style="height:20px"></div>
+				<div style="font-size: 50px;color:rgb(191, 0, 0); width:80%;margin-left:10%;font-weight:600"><span>有效时间：<span id="today1"></span>至<span id="today2"></span></span></div>
+				<div style="height:20px"></div>
+				<div style="font-size: 50px;font-weight: bold;">审核状态：审核通过</div>
+				<div style="width: 40%;margin-left: 30%;font-size: 50px;color:gray;background-color: rgb(106,175,118);padding-top: 10px;padding-bottom: 10px;font-style: italic;margin-top: 20px;">已进校</div>
+				<div style="height:100px"></div>
 			</div>
 		</div>
+
+	</div>
+	</div>
+</div>
 
 
 		<div style="width:95%;font-size:40px;color:#0560A6;box-shadow:5px 5px 5px #cccccc;padding-top:30px;padding-bottom:30px;padding-left:40px;padding-right: 40px;margin: auto;margin-top: 50px;">
